remove strange css definition for .wrap (tested with FF and chrome: no change in behaviour), fixes #110
note: these definitions come from some bootstrap docs or examples

--- a/nsupdate/static/css/nsupdate.css
+++ b/nsupdate/static/css/nsupdate.css
@@ -9,8 +9,6 @@ html, body {
 
 .wrap {
   min-height: 100%;
-  height: auto !important;
-  height: 100%;
   /* Negative indent footer by its height */
   margin: 0 auto -120px;
   /* Pad bottom by footer height */
